Now let's unite. Film and bulk are null.